JO-2008-02-11-0: Bugfix:    Queries Average Job Turnaround Time and Average Job Wait Time irresponsive on MySQL
                 Bugster:   6661473
                 Review:    AP

AP-2008-02-06-0: Bugfix:    Correct the field name in dbwriter.xml for mysql 
                            to ju_exit_status

PJ-2008-01-31-0: Bugfix:    Sort on table column throws exception 
                            if explicit SORT specified in 
                            SimpleQuery Sort on table column
                 Bugfix:    ORDER BY clause ignored in Advanced Query
                 Bugster:   6549694,6598005 
                 Issue:     2344, 2354
                 Review:    JO

AP-2008-01-22-0: Bugfix:    deletion rule for PostgreSQL incorrect for deletion 
                            of sge_share_log
                 Bugster:   6653090
                 Issue:     2468
                 Review:    JO

AP-2008-01-16-0: Bugfix:    o Wrong variable for calculating daily host values from 
                              hourly ones
                            o DBW derived rules and reporting queries that count 
                              jobs need to be updated - updating views view_accounting, 
                              view_job_times, view_jobs_completed
                            o Updating queries, fixing sql statements, adding 
                              descriptions
                 Bugster:   6457900, 6638354
                 Issue:     2463, 2440
                 Review:    JO

JO-2008-01-04-0: RFE:      dbwriter should write checkpoint to database
                 Bugster:  6644709
                 Issue:    2450
                 Review:   LP

JO-2007-12-19-0: Bugfix:   ARCo online help contains invalid, unclear or outdated information
                 Bugster:  6634786
                 Issue:    2434
                 Review:   JG

AP-2007-12-18-0: Bugfix:    o Queue Consumables query incorrect in ARCo predefined 
                              queries